package protobuf;
option java_package = "com.alan.proto";


message Msg_Hello {

    required string msg = 1;

}